# Lab-1.-Fundamentals-of-Qt-C-Program-Development

./: CMakeLists.txt  README.md  calculator.cpp
